--- a/1_toDo/assets/style.css
+++ b/1_toDo/assets/style.css
@@ -1,18 +1,28 @@
+@font-face {
+  font-family: yekan;
+  src: url('./font/yekan.woff') format('woff');
+
+}
+
 *,
 *::before,
 *::after{
+    font-family: yekan;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-header img{
+.header{
+    background-image: url(./images/bg-desktop-light.jpg);
     width: 100%;
+    height: 300px;
+    object-fit:cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
-.shadow{
 
-}
 .btn-white{
     font-size: 1.5rem;
     font-weight: 900;
@@ -20,9 +30,7 @@ header img{
     cursor: pointer;
 }
 
-.light{
-  display: none;
-}
+
 .btn{
     cursor: pointer;
     justify-content: center;
@@ -68,6 +76,14 @@ h1{
   padding: 10px;
   border: none;
 }
+
+.add button{
+  background-color: transparent;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+}
+
 /* ---------------------------------list task------------------------------------ */
 .list-task li{
   display: flex;
@@ -85,6 +101,11 @@ h1{
 
 }
 
+ul button{
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
 
 .list-task:not(:last-child) { 
   border-bottom: 1px solid gray;
@@ -94,6 +115,7 @@ h1{
 
 .bottom-menu{
   display: flex;
+  margin-top: 10px;
   justify-content:space-between ;
 }
 
@@ -105,6 +127,44 @@ h1{
 .footer p{
   margin:7px;
 }
+
+/* ------------------------------------Dark Mode------------------------------------------------ */
+.dark-mode{
+  background-color: rgb(31, 30, 30);
+}
+
+.dark-mode2{
+  background-color:rgba(72,75,106,255);
+  color: white;
+}
+
+.header-dark{
+  background-image: url(./images/bg-desktop-dark.jpg);
+}
+
+.inp-dark {
+  background-color:rgba(72,75,106,255);
+  color: white;
+
+}
+.inp-dark input{
+  background-color:rgba(72,75,106,255);
+  color: white;
+
+}
+
+.sun-moon-tog{
+  /* background-image: url('./images/moon.png'); */
+}
+
+/* -----------------------------------------responsive------------------------------------------- */
+@media (max-width: 600px) {
+  body{
+    font-size: .5rem;
+  }
+}
+
+
 /* ------------------------rounded check------------------------------- */
 /* 
  .round {
